--- a/render.yaml
+++ b/render.yaml
@@ -10,14 +10,15 @@ services:
     rootDir: backend
     buildCommand: npm install && npx prisma generate && npm run build
     startCommand: npx prisma migrate deploy && node dist/index.js
+    healthCheckPath: /api/health
     autoDeploy: true
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: redesocial-db
-          property: connectionString
+          property: internalConnectionString
       - key: PORT
-        value: 3000
+        value: "3000"
 
 staticSites:
   - name: redesocial-frontend
@@ -26,4 +27,4 @@ staticSites:
     staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
-        value: https://REPLACE_WITH_BACKEND_URL/api
+        value: https://redesocial-api.onrender.com/api
