--- a/render.yaml
+++ b/render.yaml
@@ -12,8 +12,7 @@ services:
     region: oregon
     rootDir: backend
     buildCommand: npm ci && npm run build
-    preDeployCommand: npx prisma migrate deploy && npm run seed
-    startCommand: node dist/index.js
+    startCommand: npx prisma migrate deploy && npm run seed && node dist/index.js
     healthCheckPath: /api/health
     autoDeploy: true
     envVars:
@@ -22,14 +21,13 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: redesocial-db
-          property: internalConnectionString
+          property: connectionString
       - key: PORT
         value: "3000"
   - type: web
     name: redesocial-frontend
-    env: static
+    runtime: static
     plan: free
-    region: oregon
     rootDir: frontend
     buildCommand: npm ci && npm run build
     staticPublishPath: dist
