--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && npx vite build",
     "preview": "vite preview",
     "deploy": "npm run build",
-    "postinstall": "chmod +x node_modules/.bin/vite || true"
+    "postinstall": ""
   },
   "dependencies": {
     "react": "^18.2.0",
